<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/asalkata"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/word"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#000000" />
    <TextView
        android:id="@+id/define"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/definition"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/dictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/define"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:lineSpacingMultiplier="1.5"
        android:text="New Text"
        android:textSize="15sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/darkblue"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/copyright_image"
            android:contentDescription="@string/copyright"/>
        <!--android:text="@string/copyright"-->
        <!--android:textSize="15sp"-->
        <!--android:textColor="@color/black"-->
        <!--android:textColorLink="@color/black"-->

    </LinearLayout>

</RelativeLayout>