<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_weight="1"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkblue"
        android:id="@+id/relay1"
        >

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/appslogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_kamusitas"
            android:padding="26dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="194dp">

        <Button
            android:id="@+id/btnistilah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_marginLeft="36dp"
            android:text="@string/kamus_istilah"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/selection_border"/>

        <Button
            android:id="@+id/btn_bhs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:textStyle="bold"
            android:text="@string/kamus_bahasa"
            android:textColor="@color/black"
            android:background="@drawable/selection_border"/>
    </RelativeLayout>

    <!--<TextView-->
    <!--android:id="@+id/choosetxt"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignStart="@+id/choosetxt2"-->
    <!--android:layout_alignLeft="@+id/choosetxt2"-->
    <!--android:layout_marginTop="197dp"-->
    <!--android:text="Pilih Kamus   :"-->
    <!--android:textColor="@color/black"-->
    <!--android:textSize="20sp"-->
    <!--android:textStyle="bold" />-->
    <!--<Spinner-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/spinner1"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_below="@+id/choosetxt"-->
    <!--android:background="@drawable/spinner_border"-->
    <!--android:layout_marginBottom="30dp"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:popupBackground="@color/white"/>-->

    <TextView
        android:id="@+id/choosetxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_marginTop="292dp"
        android:text="@string/pilih_bahasa"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_centerInParent="true"
        android:layout_below="@+id/choosetxt2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/spinner_border"
        android:popupBackground="@color/white"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="64dp"
        android:layout_below="@+id/spinner2"
        android:background="@drawable/button_border"
        android:text="@string/select"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_border"
        android:text="Default"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:background="@color/darkblue">
        <ImageView
            android:contentDescription="@string/copyright"
            android:layout_width="120dp"
            android:layout_height="23dp"
            android:id="@+id/copyright"
            android:background="@drawable/copyright_image"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>
        <!--android:text="@string/copyright"-->
        <!--android:textSize="15sp"-->
        <!--android:textColor="@color/black"-->
        <!--android:textColorLink="@color/black"-->

    </LinearLayout>
</RelativeLayout>